getGdvRelease() f. SatzFatory/Registry übernommen